--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -200,6 +200,7 @@ body {
       font-family: Helvetica;
       font-size: 12px;
       color: #555;
+      text-align: center;
 
       .supplier,
       .pound-rating,
@@ -207,7 +208,6 @@ body {
       .value {
         border-bottom: solid 1px #dcdcdc;
         border-right: solid 1px #dcdcdc;
-        height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
