--- a/src/assets/scss/index.css
+++ b/src/assets/scss/index.css
@@ -289,7 +289,7 @@ header .line-break {
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  background-color: #f5f5f5;
+  border: solid 1px #dcdcdc;
   font-family: Helvetica;
   font-size: 12px;
   font-weight: bold;
@@ -298,11 +298,38 @@ header .line-break {
   text-align: center;
   padding: 0;
   border: 1px solid #bdbdbd;
+  background: #f9f9f9;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #f9f9f9 0%, #f8f8f8 38%, #ebebeb 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #f9f9f9 0%, #f8f8f8 38%, #ebebeb 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #f9f9f9 0%, #f8f8f8 38%, #ebebeb 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f9f9', endColorstr='#ebebeb', GradientType=0);
+  /* IE6-9 */
 }
 
 .pagination .buttons .btn-active {
-  background-color: #686868;
-  color: white;
+  background: #5a5a5a;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #5a5a5a 0%, #5a5a5a 2%, #5f5f5f 5%, #5f5f5f 7%, #626262 10%, #646464 17%, #5d5d5d 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #5a5a5a 0%, #5a5a5a 2%, #5f5f5f 5%, #5f5f5f 7%, #626262 10%, #646464 17%, #5d5d5d 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #5a5a5a 0%, #5a5a5a 2%, #5f5f5f 5%, #5f5f5f 7%, #626262 10%, #646464 17%, #5d5d5d 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5a5a5a', endColorstr='#5d5d5d', GradientType=0);
+  /* IE6-9 */
+  color: #f2f2f2;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  background-color: #606060;
+  -webkit-box-shadow: 0 1px #fff, inset 0 1px 5px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 1px #fff, inset 0 1px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 1px #fff, inset 0 1px 5px rgba(0, 0, 0, 0.4);
+  text-shadow: 0 1px rgba(0, 0, 0, 0.13);
 }
 
 .popover-header {
